fix: correct misalignment between pic and social links on small screens

--- a/css/custom.css
+++ b/css/custom.css
@@ -77,7 +77,7 @@ section.resume-section .resume-section-content {
 }
 
 .navbar .social-links {
-    font-size: 1.5rem;
+    font-size: 30px;
 }
 
 .navbar .navbar-toggler:focus {
@@ -339,6 +339,10 @@ div>h2>span {
         height: 132px;
         width: 132px;
         filter:none;
+    }
+
+    .navbar .social-links {
+    padding-right: 4px;
     }
 
     div.profile-container {
